<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cartesian_target</name>
  <version>0.0.0</version>
  <description>Cartesian target publisher for XR teleop (KDL FK inside).</description>
  <maintainer email="googoo000078@gmail.com">ming</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>kdl_parser</depend>
  <depend>orocos_kdl</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>xr_interfaces</depend>
  <depend>eigen3_cmake_module</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
